Fix a problem when dealing with directories.